[metadata]
name = pyprop8
version = 1.1.4
author = Andrew Valentine
author_email = andrew.valentine@durham.ac.uk
description = A lightweight package for synthetic seismograms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/valentineap/pyprop8
project_urls =
    Bug Tracker = https://github.com/valentineap/pyprop8/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires = numpy; scipy;

[options.packages.find]
where = src
